# fwknop

./: .dockerignore  .gitignore  AUTHORS  CREDITS  ChangeLog  ChangeLog-v2.0  ChangeLog-v2.0rc5  ChangeLog.git  ChangeLog.old  Dockerfile.client  Doxyfile  INSTALL  Makefile  Makefile.am  NEWS  README  README.md  ShortLog-v2.0  ShortLog-v2.0.0  ShortLog-v2.0rc5  TODO  VERSION  autogen.sh  base64.c  base64.h  cipher_funcs.c  config.h  config.status  configure.ac  diffstat-v2.0  diffstat-v2.0.0  diffstat-v2.0rc5  digest.c  digest.h  fko_test.c  fwknop.c  fwknop.h  fwknop.spec  libtool  md5.c  (+12 more)
android/: Application.mk  README  README.DEPRECATED
android/project/: AndroidManifest.xml  ant.properties  build-4.1.2.properties  build.properties  build.xml  custom_rules.xml  sdk.paths
client/: Makefile  Makefile.am  cmd_opts.h  config_init.c  config_init.h  fwknop.8  fwknop.8.in  fwknop.c  fwknop.h  fwknop_common.h  fwknop_utests.c  getpasswd.c  getpasswd.h  http_resolve_host.c  log_msg.c  log_msg.h  spa_comm.c  spa_comm.h  utils.c  utils.h
common/: Makefile  Makefile.am  common.h  cunit_common.c  cunit_common.h  fko_util.c  fko_util.h  netinet_common.h  strlcat.c  strlcpy.c
doc/: Makefile  Makefile.am  README  fwknop.man.asciidoc  fwknopd.man.asciidoc  gpl-2.0.texi  libfko.info  libfko.texi
erlang/: LICENSE  README.md  rebar.config
erlang/src/: fwknop.app.src  fwknop.erl  fwknop_tests.erl  server.erl
extras/: fwknop.init.debian  fwknop.init.fedora  fwknop.init.openwrt
extras/apparmor/: configure_args.sh  usr.sbin.fwknopd
extras/clang/: scan-build.sh
extras/console-qr/: console-qr.sh
extras/coverity/: coverity_scan.sh
extras/fwknop-launcher/: fwknop-launcher-lsof.pl  fwknop-launcher.conf
extras/myip/: myip.c
extras/openwrt/: README.openwrt
extras/patches/: libfiu_add_pthreads.patch
extras/ramdisk/: ramdisk-create-osx.sh  ramdisk-create.sh
extras/sanitizer/: asan-build.sh  ubsan-build.sh
extras/spa-entropy/: spa-entropy.pl
extras/systemd/: fwknopd.service
extras/upstart/: fwknop.conf
fko/: Makefile.am  base64.c  base64.h  cipher_funcs.c  cipher_funcs.h  digest.c  digest.h  fko.h  fko_client_timeout.c  fko_common.h  fko_context.h  fko_decode.c  fko_digest.c  fko_encode.c  fko_encryption.c  fko_error.c  fko_funcs.c  fko_limits.h  fko_message.c  fko_nat_access.c  fko_rand_value.c  fko_server_auth.c  fko_state.h  fko_timestamp.c  fko_types.h  fko_user.c  gpgme_funcs.c  gpgme_funcs.h  md5.c  md5.h  rijndael.c  rijndael.h  sha.h  sha1.c  sha1.h  sha256.c  strlcat.c  strlcpy.c
iphone/: COPYING  Fwknop.pch  Info.plist  README  main.m
iphone/Classes/: FwknopController.h  FwknopController.m  MyAppDelegate.h  MyAppDelegate.m  bridge_fwknop.c  bridge_fwknop.h  config.h  logutils.h
iphone/Fwknop.xcodeproj/: dev.mode1v3  dev.pbxuser  project.pbxproj
lib/: Makefile  Makefile.am  base64.c  base64.h  cipher_funcs.c  cipher_funcs.h  cunit_common.c  digest.c  digest.h  fko.h  fko_client_timeout.c  fko_common.h  fko_context.h  fko_decode.c  fko_digest.c  fko_dump.c  fko_encode.c  fko_encryption.c  fko_error.c  fko_funcs.c  fko_hmac.c  fko_limits.h  fko_message.c  fko_message.h  fko_nat_access.c  fko_rand_value.c  fko_server_auth.c  fko_state.h  fko_timestamp.c  fko_user.c  fko_user.h  fko_utests.c  fko_util.c  fko_util.h  gpgme_ex.c  gpgme_funcs.c  gpgme_funcs.h  gpgme_test.c  hmac.c  hmac.h  (+18 more)
m4/: acinclude.m4  gpgme.m4
perl/FKO/: Changes  FKO.xs  MANIFEST  Makefile.PL  README  ppport.h  typemap
python/: README  fko.py  fkomodule.c  setup.py
server/: Makefile  Makefile.am  access.c  access.conf  access.conf.inst  access.h  cmd_cycle.c  cmd_cycle.h  cmd_opts.h  config_init.c  config_init.h  extcmd.c  extcmd.h  fko_test.c  fw_util.c  fw_util.h  fw_util_firewalld.c  fw_util_firewalld.h  fw_util_ipf.c  fw_util_ipf.h  fw_util_ipfw.c  fw_util_ipfw.h  fw_util_iptables.c  fw_util_iptables.h  fw_util_pf.c  fw_util_pf.h  fwknopd.8  fwknopd.8.in  fwknopd.c  fwknopd.c.rej  fwknopd.conf  fwknopd.conf.inst  fwknopd.h  fwknopd_common.h  fwknopd_errors.c  fwknopd_errors.h  fwknopd_utests.c  incoming_spa.c  incoming_spa.c.orig  incoming_spa.h  (+22 more)
src/: Makefile.am  config_init.c  config_init.h  fwknop.c  fwknop.h  fwknop_common.h  getpasswd.c  getpasswd.h  spa_comm.c  spa_comm.h  utils.h
test/: README  afl`README.md  bogus_spa_packets  configure_build.sh  configure_max_coverage.sh  coverage_diff.py  fko-python.py  gen-coverage-report.sh  generate_cores.sh  hardening-check  init-lcov.sh  invalid.args  invalid.key  invalid2.key  lcov.env  local_spa.key  long_spa.key  rm-coverage-files.sh  run-test-suite.sh  spa_fuzzing.py  test-fwknop.pl  valgrind_suppressions
test/afl/: README  README.md  afl-compile.sh  afl-run.sh
test/asan/: Makefile  use-after-free.c
test/c-unit-tests/: Makefile.am  README.md  fko_utests.c  fko_utests.h  fwknop_utests.c  fwknopd_utests.c
test/conf/: android_access.conf  android_legacy_iv_access.conf  base64_key_access.conf  cbc_mode_access.conf  cfb_mode_access.conf  cmd_access.conf  cmd_giduid_access.conf  cmd_setuid_access.conf  ctr_mode_access.conf  default_access.conf  default_fwknopd.conf  destination_rule_fwknopd.conf  disable_aging_fwknopd.conf  disable_aging_nat_fwknopd.conf  dual_key_legacy_iv_access.conf  dual_key_usage_access.conf  ecb_mode_access.conf  expired_epoch_stanza_access.conf  expired_stanza_access.conf  fcs_spa.pcap  firewd_custom_input_chain_fwknopd.conf  firewd_custom_nat_chain_fwknopd.conf  firewd_local_nat_fwknopd.conf  firewd_nat_disable_aging_fwknopd.conf  firewd_nat_fwknopd.conf  firewd_no_flush_exit_fwknopd.conf  firewd_no_flush_init_fwknopd.conf  firewd_no_flush_init_or_exit_fwknopd.conf  firewd_output_chain_fwknopd.conf  firewd_snat_fwknopd.conf  firewd_snat_no_translate_ip_fwknopd.conf  firewd_snat_translate_ip_fwknopd.conf  firewd_spa_dst_snat_fwknopd.conf  force_nat_access.conf  future_expired_stanza_access.conf  (+199 more)
win32/: README.VISUAL_STUDIO  config.h  fwknop-client.vcproj  fwknop-client.vcproj.vs2008  getlogin.c  getlogin.h  getopt.h  libfko.sln  libfko.sln.vs2008  libfko.vcproj  libfko.vcproj.vs2008
(+503 files in other folders)
